scrollytelling text angepasst

--- a/index.html
+++ b/index.html
@@ -100,13 +100,15 @@
 
     <!-- STAGE 3 -->
     <section class="text-stage" data-media="3">
-      <article class="text-step spacing-short" data-md="slide3_01_intro.md"></article>
-      <article class="text-step spacing-short"
+      <article class="text-step spacing-long" data-md="slide3_01_intro.md"></article>
+      <article class="text-step spacing-long"
                data-md="slide3_02_parasol.md"
                data-stage-classes="show-parasol-grunewald"></article>
-      <article class="text-step spacing-short"
+     
+      <article class="text-step spacing-long"
                data-md="slide3_03_meisen.md"
                data-stage-classes="show-parasol-grunewald show-meisen-grunewald"></article>
+      
       <article class="text-step spacing-long"
                data-md="slide3_04_bias_text.md"
                data-stage-classes="show-parasol-grunewald show-meisen-grunewald"></article>
@@ -125,7 +127,7 @@
                data-stage-classes="show-fundpunkte show-charts"></article>
 
       <!-- Hier sieht man noch Viererkarte + Fundpunkte + Charts -->
-      <article class="text-step spacing-long"
+      <article class="text-step spacing-xlong"
                data-md="slide7_01_prediction_intro.md"
                data-stage-classes="show-fundpunkte show-charts"></article>
 
