--- a/img/surrogate_tree.html
+++ b/img/surrogate_tree.html
@@ -1,68 +1,65 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<title>Global Surrogate Tree</title>
+<html lang="de">
+<head>
+  <meta charset="utf-8">
+  <title>Global Surrogate Tree</title>
 
-<!-- Finlandica Font -->
-<link href="https://fonts.googleapis.com/css2?family=Finlandica:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <!-- Finlandica Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Finlandica:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-<style>
+  <style>
+    :root {
+      --base-font-size: 1.18rem;
+      --base-line-height: 1.68;
+    }
 
-  /* ---------------------------------------------
-     GLOBAL ROOT VARIABLES — müssen IN <style> stehen
-     --------------------------------------------- */
-  :root {
-    --base-font-size: 1.18rem;
-    --base-line-height: 1.68;
-  }
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden; /* verhindert eigenes Scrollen */
+      background: transparent !important;
+      font-family: "Finlandica", system-ui, -apple-system, sans-serif;
 
-  html, body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background: transparent !important;
-    font-family: "Finlandica", system-ui, -apple-system, sans-serif;
+      font-size: var(--base-font-size);
+      line-height: var(--base-line-height);
+    }
 
-    /* globale Typografie */
-    font-size: var(--base-font-size);
-    line-height: var(--base-line-height);
-  }
+    #tree-svg {
+      width: 100%;
+      height: 100%;
+      display: block;
+    }
 
-  #tree-svg {
-    width: 100%;
-    height: auto;
-    display: block;
-  }
+    .label {
+      font-size: 0.75rem;
+      text-anchor: middle;
+      pointer-events: none;
+    }
 
-  .label {
-    font-size: 0.75rem;
-    text-anchor: middle;
-    pointer-events: none;
-  }
+    .leaf-path {
+      transition: stroke 0.2s ease, stroke-width 0.2s ease, opacity 0.2s ease;
+    }
+    .leaf-path.faded {
+      opacity: 0.15;
+      stroke-width: 0.8;
+    }
+    .leaf-path.highlighted {
+      opacity: 1.0;
+      stroke: #000;
+      stroke-width: 2.8;
+    }
+  </style>
 
-  .leaf-path {
-    transition: stroke 0.2s ease, stroke-width 0.2s ease, opacity 0.2s ease;
-  }
-  .leaf-path.faded {
-    opacity: 0.15;
-    stroke-width: 0.8;
-  }
-  .leaf-path.highlighted {
-    opacity: 1.0;
-    stroke: #000;
-    stroke-width: 2.8;
-  }
+  <script src="https://d3js.org/d3.v7.min.js"></script>
+</head>
 
-</style>
+<body>
+  <svg id="tree-svg"></svg>
 
 <svg id="tree-svg"></svg>
-<style>
-  svg {
-    width: 100% !important;
-    height: 100% !important;
-  }
-</style>
+
 <script src="https://d3js.org/d3.v7.min.js"></script>
 
 <script>
