--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600&display=swap" rel="stylesheet">
 
   <!-- Hauptstyles -->
-  <link rel="stylesheet" href="style.css">
-
+  <link rel="stylesheet" href="style.css?v=12">
   <!-- Markdown-Parser -->
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
