--- a/index.html
+++ b/index.html
@@ -256,6 +256,10 @@
             data-model="true"
             data-md="slide5_06_prediction_explain.md">
     </article>
+    <article class="step step--spacer"
+            data-stage="5"
+            data-trigger="prediction-map">
+    </article>
 
   </main>
 
