implementierung neues Diagramm

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <div class="overlay-model hidden">
     <div class="overlay-model-inner">
       <iframe
-        src="surrogate_tree.html"
+        src="viz/index.html"
         class="model-frame"
         loading="lazy">
       </iframe>
